Switch from FixedThreadPool to VirtualThreadPerTaskExecutor